##----------------------------------------------------------------------------
##       $Id: Makefile.am 55570 2004-01-22 06:09:02Z ossama $
##
##       Makefile for the Token tests
##----------------------------------------------------------------------------

##
##  Process this file with automake to create Makefile.in
##

SUBDIRS = \
  collection  \
  deadlock  \
  invariant  \
  manual  \
  mutex  \
  rw_lock
